--- a/artigo-sistemas-de-recomendacao/notebook-artigo.ipynb
+++ b/artigo-sistemas-de-recomendacao/notebook-artigo.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from mlxtend.frequent_patterns import apriori\n",
-    "from mlxtend.frequent_patterns import association_rules\n",
+    "from mlxtend.frequent_patterns import apriori, association_rules, fpgrowth\n",
     "\n",
     "\n",
     "#Suppress warnings\n",
@@ -711,7 +710,7 @@
     "top_rules['antecedents'] = top_rules['antecedents'].apply(lambda x: ', '.join(list(x)))\n",
     "top_rules['consequents'] = top_rules['consequents'].apply(lambda x: ', '.join(list(x)))\n",
     "\n",
-    "# Creating a table displaying the top 15 rules\n",
+    "# Creating a table displaying the top 10 rules\n",
     "top_rules_table = top_rules[['antecedents', 'consequents', 'support', 'confidence', 'lift']].round(2)\n",
     "\n",
     "\n",
@@ -730,21 +729,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Antecedentes</th>\n",
+       "      <th>Consequentes</th>\n",
+       "      <th>Suporte</th>\n",
+       "      <th>Confiança</th>\n",
+       "      <th>Lift</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Whey Protein, Garrafa</td>\n",
+       "      <td>Creatina</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>1.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Creatina</td>\n",
+       "      <td>Whey Protein, Garrafa</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>1.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Whey Protein</td>\n",
+       "      <td>Creatina, Garrafa</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>1.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Creatina, Garrafa</td>\n",
+       "      <td>Whey Protein</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Creatina</td>\n",
+       "      <td>Whey Protein</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>1.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Whey Protein</td>\n",
+       "      <td>Creatina</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Creatina, Whey Protein</td>\n",
+       "      <td>Garrafa</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Garrafa</td>\n",
+       "      <td>Creatina, Whey Protein</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Creatina</td>\n",
+       "      <td>Garrafa</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>1.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Garrafa</td>\n",
+       "      <td>Creatina</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>1.08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Antecedentes', 'Consequentes', 'Suporte', 'Confiança', 'Lift']"
+       "             Antecedentes            Consequentes  Suporte  Confiança  Lift\n",
+       "0   Whey Protein, Garrafa                Creatina     0.26       0.96  1.89\n",
+       "1                Creatina   Whey Protein, Garrafa     0.26       0.51  1.89\n",
+       "2            Whey Protein       Creatina, Garrafa     0.26       0.49  1.89\n",
+       "3       Creatina, Garrafa            Whey Protein     0.26       1.00  1.89\n",
+       "4                Creatina            Whey Protein     0.50       0.98  1.85\n",
+       "5            Whey Protein                Creatina     0.50       0.94  1.85\n",
+       "6  Creatina, Whey Protein                 Garrafa     0.26       0.52  1.11\n",
+       "7                 Garrafa  Creatina, Whey Protein     0.26       0.55  1.11\n",
+       "8                Creatina                 Garrafa     0.26       0.51  1.08\n",
+       "9                 Garrafa                Creatina     0.26       0.55  1.08"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Aplicando o algoritmo FP-Growth\n",
+    "frequent_itemsets = fpgrowth(df, min_support=0.25, use_colnames=True)\n",
+    "\n",
+    "# Gerando as regras de associação\n",
+    "rules = association_rules(frequent_itemsets, metric=\"lift\", min_threshold=1)\n",
+    "\n",
+    "# Renomeando colunas\n",
+    "rules = rules.rename(columns={\n",
+    "    'antecedents': 'Antecedentes',\n",
+    "    'consequents': 'Consequentes',\n",
+    "    'support': 'Suporte',\n",
+    "    'confidence': 'Confiança',\n",
+    "    'lift': 'Lift'\n",
+    "})\n",
+    "\n",
+    "# Salvando as 10 maiores associações (em ordem de lift)\n",
+    "top_rules = rules.sort_values(by='Lift', ascending=False).head(10)\n",
+    "\n",
+    "# Convertendo antecedentes e consequentes em strings para usar como tabela\n",
+    "top_rules['Antecedentes'] = top_rules['Antecedentes'].apply(lambda x: ', '.join(list(x)))\n",
+    "top_rules['Consequentes'] = top_rules['Consequentes'].apply(lambda x: ', '.join(list(x)))\n",
+    "\n",
+    "# Creating a table displaying the top 10 rules\n",
+    "top_rules_table = top_rules[['Antecedentes', 'Consequentes', 'Suporte', 'Confiança', 'Lift']].round(2)\n",
+    "\n",
+    "\n",
+    "top_rules_table.reset_index().drop(columns='index', axis =1)"
+   ]
   },
   {
    "cell_type": "code",
